# ProtoryNet

./: ProtoryNet.ipynb  README.md  RNN_movie_reviews.ipynb  gen_data.py  gen_sent_embeds.py  setup.cfg  train.csv
datasets/hotel/: test_not_clean  train.csv  train_not_clean  y_test  y_train
example/: ProtoryNet_example.ipynb  Protorynet_no_tuning.ipynb  protorynet_no_tuning.ipynb
src/protoryNet/: protoryNet.py
