[metadata]
name = protorynet
version = 0.0.1
author = Dat Hong
author_email = hongtiendat@gmail.com
description = ProtoryNet first project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/dathong/ProtoryNet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src